syntax = "proto3";

package payment;

service PlanService {
    rpc FindOne (FindTenantMessage) returns (Plan) {}
    rpc PlanExist (FindTenantMessage) returns (BooleanPayload) {}
}

message FindTenantMessage {
    string normalizedName = 1;
    string key = 2;
    string secret = 3;
}

message Plan {
    string id = 1;
    string name = 2;
    string normalizedName = 3;
    string createdAt = 4;
    string updatedAt = 5;
}

message BooleanPayload {
    bool success = 1;
}


service SubscriptionService {
    rpc Create (CreateSubscriptionMessage) returns (Subscription) {}
    rpc FindOne (FindSubscriptionMessage) returns (BooleanPayload) {}
}

message CreateSubscriptionMessage {
    string tenantId = 1;
    string userId = 2;
    string customerId = 3;
    string planId = 4;
    string couponId = 5;
}

message FindSubscriptionMessage {
    string tenantId = 1;
    string userId = 2;
    string customerID = 3;
}

message Subscription {
    string id = 1;
    string createdAt = 4;
    string updatedAt = 5;
}
